Filter out non-english text

--- a/src/data_processing/text_cleaning.ipynb
+++ b/src/data_processing/text_cleaning.ipynb
@@ -2,12 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import re"
+    "import re\n",
+    "from langdetect import detect, DetectorFactory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter only English Reviews\n",
+    "\n",
+    "DetectorFactory.seed = 0 # Ensure consistent results\n",
+    "\n",
+    "def is_english(text):\n",
+    "    # Checks if a text is English or not. Returns True if it is English, False if otherwise.\n",
+    "    try:\n",
+    "        return detect(text) == \"en\" # Checks if text is English\n",
+    "    except:\n",
+    "        return False # In case of error such as empty string\n",
+    "\n",
+    "def filter_english(dataframe, text_col):\n",
+    "    \"\"\"\n",
+    "    Filters out any rows that contain Non-English language.\n",
+    "    \"\"\"\n",
+    "    dataframe['is_english'] = dataframe[text_col].apply(is_english) # Create new boolean column to classify if the text is english\n",
+    "    english_df = dataframe[dataframe['is_english']] # New DataFrame that only has rows with english values\n",
+    "    \n",
+    "    english_df = english_df.drop(columns=[\"is_english\"]) # Drop is_english column\n",
+    "    \n",
+    "    return english_df"
    ]
   },
   {
