tokenize words in text column

--- a/src/data_processing/text_cleaning.ipynb
+++ b/src/data_processing/text_cleaning.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import re\n",
-    "from langdetect import detect, DetectorFactory"
+    "from langdetect import detect, DetectorFactory\n",
+    "import spacy"
    ]
   },
   {
@@ -72,11 +73,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tokenizaton"
+    "# Tokenizaton\n",
+    "def tokenize(text):\n",
+    "    # Tokenizes a text and returns the tokens\n",
+    "    \n",
+    "    nlp = spacy.load(\"en_core_web_sm\") # Create NLP Pipeline\n",
+    "    \n",
+    "    doc = nlp(text) # Process the text\n",
+    "    tokens = [token for token in doc] # Stores the tokens\n",
+    "    \n",
+    "    return tokens\n",
+    "\n",
+    "def add_tokenized_words(dataframe, text_col):\n",
+    "    \"\"\"\n",
+    "    Tokenizes every row in the text column down. Creates a new column containing tokenized words.\n",
+    "    Returns the new DataFrame.\n",
+    "    \"\"\"\n",
+    "    dataframe[\"tokenized_words\"] = dataframe[text_col].apply(tokenize) # Tokenize words and add to new column\n",
+    "    \n",
+    "    return dataframe"
    ]
   },
   {
