--- a/src/data_processing/text_cleaning.ipynb
+++ b/src/data_processing/text_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,19 +61,16 @@
     "    \"\"\"\n",
     "    Ensures data is consistent and removes punctuation for better model performance.\n",
     "    \"\"\"\n",
-    "    df = pd.read_csv(dataframe) # Initialize DataFrame\n",
+    "    dataframe = dataframe.dropna(subset=[text_col]) # Remove rows with missing values in text column\n",
     "    \n",
-    "    df = df.drop(df.duplicated) # Remove Duplicated rows\n",
-    "    df = df.dropna(subset=[text_col]) # Remove rows with missing values in text column\n",
+    "    dataframe[text_col] = dataframe[text_col].apply(regex) # Remove punctuation marks\n",
     "    \n",
-    "    df[text_col] = df[text_col].apply(regex) # Remove punctuation marks\n",
-    "    \n",
-    "    return df"
+    "    return dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,11 +81,11 @@
     "    nlp = spacy.load(\"en_core_web_sm\") # Create NLP Pipeline\n",
     "    \n",
     "    doc = nlp(text) # Process the text\n",
-    "    tokens = [token for token in doc] # Stores the tokens\n",
+    "    tokens = [token.text for token in doc] # Stores the tokens\n",
     "    \n",
     "    return tokens\n",
     "\n",
-    "def add_tokenized_words(dataframe, text_col):\n",
+    "def tokenize_words(dataframe, text_col):\n",
     "    \"\"\"\n",
     "    Tokenizes every row in the text column down. Creates a new column containing tokenized words.\n",
     "    Returns the new DataFrame.\n",
@@ -100,29 +97,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Stop Word Removal"
+    "# Stop Word Removal\n",
+    "def stop_word_filter(tokens):\n",
+    "    # Removes stop words from an array of tokens and returns the filtered tokens\n",
+    "    nlp = spacy.load(\"en_core_web_sm\") # Create NLP Pipeline\n",
+    "    stop_words = nlp.Defaults.stop_words # Create a list of stop words\n",
+    "    \n",
+    "    filtered_tokens = [token for token in tokens if token.lower() not in stop_words] # Remove stop words\n",
+    "    \n",
+    "    return filtered_tokens\n",
+    "\n",
+    "def remove_stop_words(dataframe, token_col):\n",
+    "    \"\"\"\n",
+    "    Removes stop words from tokens array and returns the DataFrame.\n",
+    "    \"\"\"\n",
+    "    dataframe[token_col] = dataframe[token_col].apply(stop_word_filter)\n",
+    "    \n",
+    "    return dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lemmatization"
+    "# Lemmatization\n",
+    "def lemmatize(tokens):\n",
+    "    \"\"\"\n",
+    "    Lemmatizes the text and returns the lemmatized words.\n",
+    "    \"\"\"\n",
+    "    nlp = spacy.load(\"en_core_web_sm\") # Create NLP Pipeline\n",
+    "    \n",
+    "    text = \" \".join(tokens) # Create a text version of the tokens\n",
+    "    doc = nlp(text) # Process the text\n",
+    "    lemmatized_tokens = [token.lemma_ for token in doc]\n",
+    "    \n",
+    "    return lemmatized_tokens\n",
+    "\n",
+    "def lemmatize_tokens(dataframe, token_col):\n",
+    "    \"\"\"\n",
+    "    Lemmatizes the tokens in the token column and returns the DataFrame.\n",
+    "    \"\"\"\n",
+    "    dataframe[token_col] = dataframe[token_col].apply(lemmatize)\n",
+    "    \n",
+    "    return dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Vectorization"
+    "# Vectorization\n",
+    "def vectorize_tokens(tokens):\n",
+    "    # Vectorizes the array of tokens and returns the array of vectors.\n",
+    "    nlp = spacy.load(\"en_core_web_lg\") # Create NLP Pipeline\n",
+    "    \n",
+    "    text = \" \".join(tokens) # Create a text version of the tokens\n",
+    "    doc = nlp(text) # Process the text\n",
+    "    \n",
+    "    vectorized_tokens = [doc.vector] # Vectorize tokens and insert into a list\n",
+    "    \n",
+    "    return vectorized_tokens\n",
+    "    \n",
+    "def vectorize(dataframe, token_col):\n",
+    "    \"\"\"\n",
+    "    Takes tokens and provides a new column containing their vectors. \n",
+    "    Returns the DataFrame.\n",
+    "    \"\"\"\n",
+    "    nlp = spacy.load(\"en_core_web_lg\") # Create NLP Pipeline\n",
+    "    \n",
+    "    dataframe[\"Vectors\"] = dataframe[token_col].apply(vectorize_tokens) # Vectorize tokens and add to Vectors column\n",
+    "    \n",
+    "    return dataframe"
    ]
   }
  ],
