addition of LSTM model

--- a/src/modeling/sentiment_model.ipynb
+++ b/src/modeling/sentiment_model.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from keras.models import  Sequential\n",
+    "from keras.layers import LSTM, Dense, Dropout"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +80,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# LSTM"
+    "def lstm_model(X_train, X_test, y_train, y_test):\n",
+    "    # Creates an LSTM model and returns the predicted y values.\n",
+    "    model = Sequential() # Initialize model\n",
+    "    # Add LSTM model\n",
+    "    model.add(LSTM(128, input_shape=(X_train.shape[1], X_train.shape[2]), return_sequences=False))\n",
+    "    model.add(Dropout(0.5)) # Add dropout layer to prevent overfitting\n",
+    "    model.add(Dense(1, activation=\"sigmoid\")) # Output layer\n",
+    "    # Compile model\n",
+    "    model.compile(optimizer=\"adam\", loss='binary_crossentropy', metrics=['acuracy'])\n",
+    "    # Fit the model\n",
+    "    model.fit(X_train, y_train, epochs=2, batch_size=64, validation_data=(X_test, y_test))\n",
+    "    \n",
+    "    y_pred_prob = model.predict(X_test) # Predict probability of positive classification\n",
+    "    \n",
+    "    y_pred = int((y_pred_prob >= 0.5)) # Get actual classification\n",
+    "    \n",
+    "    return y_pred\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
