--- a/src/modeling/sentiment_model.ipynb
+++ b/src/modeling/sentiment_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from keras.models import  Sequential\n",
-    "from keras.layers import LSTM, Dense, Dropout"
+    "from keras.layers import LSTM, Dense, Dropout\n",
+    "from keras.preprocessing.sequence import pad_sequences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,24 +81,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def lstm_model(X_train, X_test, y_train, y_test):\n",
-    "    # Creates an LSTM model and returns the predicted y values.\n",
+    "    \"\"\"\n",
+    "    Creates an LSTM model and returns the predicted y values.\n",
+    "    Makes use of padding to ensure that the sequences are of equal length.\n",
+    "    \"\"\"\n",
+    "    max_sequence_length = 20 # Define max length for padding\n",
+    "    # Pad the sequences of train and test data\n",
+    "    X_train_padded = pad_sequences(X_train, maxlen=max_sequence_length, padding=\"post\", truncating=\"post\", value=0.0)\n",
+    "    X_test_padded = pad_sequences(X_test, maxlen=max_sequence_length, padding=\"post\", truncating=\"post\", value=0.0)\n",
+    "    \n",
     "    model = Sequential() # Initialize model\n",
     "    # Add LSTM model\n",
-    "    model.add(LSTM(128, input_shape=(X_train.shape[1], X_train.shape[2]), return_sequences=False))\n",
+    "    model.add(LSTM(128, input_shape=(X_train_padded.shape[1], X_train_padded.shape[2]), return_sequences=False))\n",
+    "    \n",
     "    model.add(Dropout(0.5)) # Add dropout layer to prevent overfitting\n",
     "    model.add(Dense(1, activation=\"sigmoid\")) # Output layer\n",
-    "    # Compile model\n",
-    "    model.compile(optimizer=\"adam\", loss='binary_crossentropy', metrics=['acuracy'])\n",
-    "    # Fit the model\n",
-    "    model.fit(X_train, y_train, epochs=2, batch_size=64, validation_data=(X_test, y_test))\n",
+    "    \n",
+    "    model.compile(optimizer=\"adam\", loss='binary_crossentropy', metrics=['acuracy']) # Compile model\n",
+    "    model.fit(X_train_padded, y_train, epochs=2, batch_size=64, validation_data=(X_test_padded, y_test)) # Fit the model\n",
     "    \n",
     "    y_pred_prob = model.predict(X_test) # Predict probability of positive classification\n",
-    "    \n",
     "    y_pred = int((y_pred_prob >= 0.5)) # Get actual classification\n",
     "    \n",
     "    return y_pred\n",
@@ -106,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
