add results to dataframe

--- a/src/modeling/topic_model.ipynb
+++ b/src/modeling/topic_model.ipynb
@@ -49,6 +49,23 @@
     "        \n",
     "    return result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def LDA_model(dataframe, tokens_col):\n",
+    "    \"\"\"\n",
+    "    Implements LDA topic modeling on each column.\n",
+    "    Stores the topics and their words in a new column.\n",
+    "    Returns the dataframe.\n",
+    "    \"\"\"\n",
+    "    dataframe[\"Topics\"] = dataframe[tokens_col].apply(LDA) # Create new column\n",
+    "    \n",
+    "    return dataframe"
+   ]
   }
  ],
  "metadata": {
