update LSTM model

--- a/main.ipynb
+++ b/main.ipynb
@@ -1426,19 +1426,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.63250935  1.1801572  -2.4337516  ...  0.6325736  -2.2874224\n",
-      "   0.11922441]\n",
-      " [ 0.08803167  1.2644774  -3.4377024  ...  0.49365038 -4.054231\n",
-      "  -0.48695865]\n",
-      " [-0.07967047  0.47914103 -1.4532579  ... -0.32401365 -2.0854313\n",
-      "   1.0677645 ]\n",
-      " ...\n",
-      " [-0.0911641   2.6328452  -2.1159296  ...  0.38197243 -1.9256793\n",
-      "   0.4708836 ]\n",
-      " [ 0.89544713  1.8062786  -0.69292146 ...  0.66781425 -2.1943\n",
-      "   0.08460329]\n",
-      " [-0.61524594  1.4708802  -2.951254   ...  2.88264    -0.97514546\n",
-      "  -1.17292   ]]\n"
+      "27    [[-0.39586553, 1.7399961, -3.407317, -0.123403...\n",
+      "31    [[0.6821702, 3.1703157, -3.5534327, -0.3009912...\n",
+      "41    [[-0.65648013, 0.4150603, -3.7340572, 1.743837...\n",
+      "40    [[-0.0011369457, 2.2868912, -3.1981432, -0.471...\n",
+      "19    [[-0.55946416, 1.5428557, -2.6332567, 1.027269...\n",
+      "38    [[-1.88131, 2.1281135, -2.5847628, 0.9240801, ...\n",
+      "33    [[-2.037259, 1.5626338, -2.8328202, 0.01045659...\n",
+      "24    [[-0.10471493, 1.6426531, -4.07776, -1.1454687...\n",
+      "46    [[-0.36434332, -0.12633006, -2.0345666, 0.4436...\n",
+      "Name: Vectors, dtype: object\n"
      ]
     }
    ],
@@ -1454,7 +1451,7 @@
     "X_test_2d = np.stack(X_test)\n",
     "X_test_2d = np.concatenate(X_test_2d, axis=0)\n",
     "\n",
-    "print(X_train_2d)"
+    "print(X_test)"
    ]
   },
   {
@@ -1548,23 +1545,19 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2s/step - accuracy: 0.7600 - loss: 0.6910 - val_accuracy: 1.0000 - val_loss: 0.6718\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2s/step - accuracy: 0.5200 - loss: 0.6935 - val_accuracy: 1.0000 - val_loss: 0.6770\n",
       "Epoch 2/2\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 60ms/step - accuracy: 0.7600 - loss: 0.6819 - val_accuracy: 1.0000 - val_loss: 0.6454\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Failed to convert a NumPy array to a Tensor (Unsupported object type list).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m lstm_pred \u001b[38;5;241m=\u001b[39m \u001b[43mlstm_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(lstm_pred)\n",
-      "File \u001b[1;32mc:\\Programming\\Python\\Industry Level Projects\\Data Science Project\\src\\modeling\\sentiment_model.py:73\u001b[0m, in \u001b[0;36mlstm_model\u001b[1;34m(X_train, X_test, y_train, y_test)\u001b[0m\n\u001b[0;32m     70\u001b[0m model\u001b[38;5;241m.\u001b[39mcompile(optimizer\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124madam\u001b[39m\u001b[38;5;124m\"\u001b[39m, loss\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbinary_crossentropy\u001b[39m\u001b[38;5;124m'\u001b[39m, metrics\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maccuracy\u001b[39m\u001b[38;5;124m'\u001b[39m]) \u001b[38;5;66;03m# Compile model\u001b[39;00m\n\u001b[0;32m     71\u001b[0m model\u001b[38;5;241m.\u001b[39mfit(X_train_padded, y_train, epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m64\u001b[39m, validation_data\u001b[38;5;241m=\u001b[39m(X_test_padded, y_test)) \u001b[38;5;66;03m# Fit the model\u001b[39;00m\n\u001b[1;32m---> 73\u001b[0m y_pred_prob \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# Predict probability of positive classification\u001b[39;00m\n\u001b[0;32m     74\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m((y_pred_prob \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.5\u001b[39m)) \u001b[38;5;66;03m# Get actual classification\u001b[39;00m\n\u001b[0;32m     76\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m y_pred\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\keras\\src\\utils\\traceback_utils.py:122\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    119\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m    120\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m    121\u001b[0m     \u001b[38;5;66;03m# `keras.config.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m--> 122\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    123\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m    124\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\tensorflow\\python\\framework\\constant_op.py:108\u001b[0m, in \u001b[0;36mconvert_to_eager_tensor\u001b[1;34m(value, ctx, dtype)\u001b[0m\n\u001b[0;32m    106\u001b[0m     dtype \u001b[38;5;241m=\u001b[39m dtypes\u001b[38;5;241m.\u001b[39mas_dtype(dtype)\u001b[38;5;241m.\u001b[39mas_datatype_enum\n\u001b[0;32m    107\u001b[0m ctx\u001b[38;5;241m.\u001b[39mensure_initialized()\n\u001b[1;32m--> 108\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mops\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mEagerTensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mctx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdevice_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mValueError\u001b[0m: Failed to convert a NumPy array to a Tensor (Unsupported object type list)."
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 83ms/step - accuracy: 0.7600 - loss: 0.6841 - val_accuracy: 1.0000 - val_loss: 0.6576\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 131ms/step\n",
+      "[[0.51880664]\n",
+      " [0.5197024 ]\n",
+      " [0.51687074]\n",
+      " [0.51683277]\n",
+      " [0.515371  ]\n",
+      " [0.5159526 ]\n",
+      " [0.5192628 ]\n",
+      " [0.51945007]\n",
+      " [0.52079976]]\n"
      ]
     }
    ],
