delete rf and logistic regression

--- a/main.ipynb
+++ b/main.ipynb
@@ -1529,7 +1529,8 @@
       "  ...\n",
       "  [ 0  0  0 ...  0  0  0]\n",
       "  [ 0  0  0 ...  0  0  0]\n",
-      "  [ 0  0  0 ...  0  0  0]]]\n"
+      "  [ 0  0  0 ...  0  0  0]]]\n",
+      "Epoch 1/2\n"
      ]
     },
     {
@@ -1544,20 +1545,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/2\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2s/step - accuracy: 0.5200 - loss: 0.6935 - val_accuracy: 1.0000 - val_loss: 0.6770\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1s/step - accuracy: 0.4400 - loss: 0.6935 - val_accuracy: 1.0000 - val_loss: 0.6763\n",
       "Epoch 2/2\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 83ms/step - accuracy: 0.7600 - loss: 0.6841 - val_accuracy: 1.0000 - val_loss: 0.6576\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 131ms/step\n",
-      "[[0.51880664]\n",
-      " [0.5197024 ]\n",
-      " [0.51687074]\n",
-      " [0.51683277]\n",
-      " [0.515371  ]\n",
-      " [0.5159526 ]\n",
-      " [0.5192628 ]\n",
-      " [0.51945007]\n",
-      " [0.52079976]]\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 66ms/step - accuracy: 0.7600 - loss: 0.6833 - val_accuracy: 1.0000 - val_loss: 0.6555\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 120ms/step\n",
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
      ]
     }
    ],
